Fixed the hero placemet on small devices

--- a/src/sections/Hero.scss
+++ b/src/sections/Hero.scss
@@ -46,6 +46,10 @@
       padding: 100px 0 0;
       text-align: center;
 
+      .text {
+        transform: none;
+      }
+
       img {
         width: 200px;
         margin-bottom: 30px;
